# PyWry

./: .gitignore  .mcp.json  404.html  README.md  SECURITY.md  index.html  objects.inv  sbom.json  sbom.xml
.claude/: settings.local.json
pywry/: AGENTS.md  README.md  build_assets.py  hatch_build.py  package-lock.json  package.json  pyproject.toml  ruff.toml
pywry/docs/: mkdocs.yml  requirements.txt
pywry/docs/docs/: changelog.md  features.md  index.md
pywry/docs/docs/components/: button.md  index.md  theming.md
pywry/docs/docs/components/chat/: index.md
pywry/docs/docs/components/htmlcontent/: content-assembly.md  index.md
pywry/docs/docs/components/modal/: index.md
pywry/docs/docs/components/toasts/: index.md
pywry/docs/docs/components/toolbar/: button.md  checkbox.md  dateinput.md  div.md  index.md  marquee.md  multiselect.md  numberinput.md  option.md  radiogroup.md  rangeinput.md  searchinput.md  secretinput.md  select.md  sliderinput.md  tabgroup.md  textarea.md  textinput.md  tickeritem.md  toggle.md  toolbar.md  toolbaritem.md
pywry/docs/docs/examples/: index.md
pywry/docs/docs/getting-started/: installation.md  quickstart.md  why-pywry.md
pywry/docs/docs/guides/: app-show.md  browser-mode.md  builder-options.md  configuration.md  deploy-mode.md  events.md  hot-reload.md  javascript-bridge.md  menus.md  multi-widget.md  oauth2.md  state-and-auth.md  tauri-plugins.md  window-management.md
pywry/docs/docs/integrations/: anywidget.md  index.md  multi-widget.md  tauri-plugins.md
pywry/docs/docs/integrations/aggrid/: grid.md  index.md
pywry/docs/docs/integrations/chat/: chat-providers.md  index.md
pywry/docs/docs/integrations/inline-widget/: index.md
pywry/docs/docs/integrations/plotly/: index.md  plotly-config.md
pywry/docs/docs/integrations/pytauri/: index.md  tauri-plugins.md
pywry/docs/docs/integrations/tradingview/: index.md  tvchart-chart-kinds.md  tvchart-config.md  tvchart-datafeed.md  tvchart-indicators.md  tvchart-mixin.md  tvchart-models.md  tvchart-udf.md
pywry/docs/docs/mcp/: index.md  plugin.md  setup.md  skills.md  tools.md
pywry/docs/docs/overrides/: home.html
pywry/docs/docs/overrides/partials/: header.html
pywry/docs/docs/reference/: assets.md  chat-manager.md  chat.md  events.md  index.md  models.md  state.md
pywry/docs/docs/reference/css/: chat.md  core.md  index.md  toast.md  tvchart.md
pywry/docs/docs/reference/events/: auth.md  chat.md  grid.md  index.md  javascript-api.md  menu.md  modal.md  plotly.md  system.md  toolbar.md  tray.md  tvchart.md
pywry/docs/docs/stylesheets/: extra.css
pywry/examples/: pywry_demo_aggrid.ipynb  pywry_demo_chat.py  pywry_demo_chat_artifacts.py  pywry_demo_chat_magentic.py  pywry_demo_deepagent_nvidia.py  pywry_demo_deploy.py  pywry_demo_modal.py  pywry_demo_multi_widget.py  pywry_demo_oauth2.py  pywry_demo_tvchart.ipynb  pywry_demo_tvchart.py  pywry_demo_tvchart_yfinance.py  pywry_demo_udf_tvchart.py
pywry/pywry/: __init__.py  __main__.py  _freeze.py  app.py  asset_loader.py  assets.py  callbacks.py  chat_providers.py  cli.py  config.py  grid.py  hot_reload.py  inline.py  modal.py  models.py  notebook.py  runtime.py  scripts.py  state_mixins.py  templates.py  toolbar.py  types.py  watcher.py  widget.py  widget_protocol.py  window_dispatch.py  window_proxy.py
pywry/pywry/_pyinstaller_hook/: hook-pywry.py
pywry/pywry/_vendor/: __init__.py
pywry/pywry/auth/: callback_server.py  deploy_routes.py  flow.py  login_page.py  providers.py  session.py  token_store.py
pywry/pywry/chat/: __init__.py  artifacts.py  html.py  manager.py  models.py  permissions.py  session.py  updates.py
pywry/pywry/chat/providers/: __init__.py  anthropic.py  callback.py  deepagent.py  magentic.py  openai.py  stdio.py
pywry/pywry/frontend/assets/: icon.icns
pywry/pywry/frontend/assets/tauri-icons/: icon.icns
pywry/pywry/frontend/src/: bridge.js  chat-handlers.js  cleanup.js  event-bridge.js  hot-reload.js  main.js  plotly-defaults.js  plotly-widget.js  system-events.js  theme-manager.js  toast-notifications.js  toolbar-bridge.js  toolbar-handlers.js  tooltip-manager.js  tvchart-widget.js  ws-bridge.js
pywry/pywry/frontend/src/tvchart/: 01-globals.js  02-datafeed.js  03-theme.js  04-series.js  05-lifecycle.js  06-storage.js  07-drawing.js  08-settings.js  09-indicators.js  10-events.js  11-legend.js  12-session-tz.js
pywry/pywry/frontend/style/: chat.css  pywry.css  tvchart.css
pywry/pywry/mcp/: __main__.py  agentic.py  app_artifact.py  builders.py  handlers.py  resources.py  server.py  state.py  tools.py
pywry/pywry/mcp/skills/: __init__.py
pywry/pywry/mcp/skills/chat/: SKILL.md
pywry/pywry/mcp/skills/chat_agent/: SKILL.md
pywry/pywry/mcp/skills/events/: SKILL.md
pywry/pywry/mcp/skills/tvchart/: SKILL.md
pywry/pywry/state/: __init__.py  _factory.py  auth.py  base.py  callbacks.py  file.py  memory.py  redis.py  server.py  sqlite.py  types.py
pywry/pywry/tvchart/: __init__.py  config.py  datafeed.py  mixin.py  models.py  normalize.py  toolbars.py  udf.py
pywry/pywry/utils/: async_helpers.py
pywry/pywry/window_manager/modes/: browser.py
pywry/tests/: conftest.py  test_alerts.py  test_app.py  test_asset_loader.py  test_assets.py  test_async_helpers.py  test_auth_callback_server.py  test_auth_deploy_routes.py  test_auth_flow_integration.py  test_auth_login_page.py  test_auth_pkce.py  test_auth_providers.py  test_auth_rbac_integration.py  test_auth_session.py  test_auth_token_store.py  test_browser_mode_e2e.py  test_callbacks.py  test_chart_store.py  test_chat.py  test_chat_e2e.py  test_chat_html.py  test_chat_manager.py  test_chat_models.py  test_chat_permissions.py  test_chat_protocol.py  test_chat_providers_anthropic.py  test_chat_providers_callback.py  test_chat_providers_init.py  test_chat_providers_magentic.py  test_chat_providers_openai.py  test_chat_providers_stdio.py  test_cli.py  test_commands.py  test_config.py  test_deepagent_provider.py  test_deploy_mode_integration.py  test_e2e.py  test_e2e_deploy_mode.py  test_e2e_rbac_widgets.py  test_error_paths.py  (+78 more)
(+146 files in other folders)
