[project]
name = "pywry"
version = "2.0.0rc7"
description = "A lightweight and blazingly fast, cross-platform, WebView rendering engine and desktop UI toolkit for Python."
authors = [{ name = "PyWry", email = "pywry2@gmail.com" }]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Desktop Environment :: Window Managers",
    "Topic :: Desktop Environment :: Gnome",
    "Topic :: Internet :: WWW/HTTP"
]
keywords = ["rendering", "frontend", "webview", "tauri", "gui", "plotly", "aggrid", "tradingview", "desktop", "notebook", "ipywidget"]

dependencies = [
    "pytauri>=0.8.0",
    "anyio>=4.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=7.1.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "watchdog>=3.0.0",
    "setproctitle>=1.3.0",
    "websockets>=16.0.0",
]

[project.scripts]
pywry = "pywry.cli:main"

[project.entry-points.pytauri]
ext_mod = "pywry._vendor.pytauri_wheel.ext_mod"

[project.entry-points."pyinstaller40"]
hook-dirs = "pywry._pyinstaller_hook:get_hook_dirs"

[dependency-groups]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.0.0",
    "fakeredis>=2.33.0",
    "testcontainers>=4.14.0",
]
lint = [
    "ruff>=0.13",
    "pylint>=3.0.0",
]
typecheck = [
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-autorefs>=1.0.0",
    "mkdocstrings[python]>=0.26.0",
    "griffe>=1.0.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
]
build = [
    "pytauri-wheel>=0.8.0",
    "pyinstaller>=6.0",
]
features = [
    "agent-client-protocol>=0.1.0",
    "anthropic>=0.34.0",
    "anywidget>=0.9.0",
    "authlib>=1.3.0",
    "cryptography>=46.0.0",
    "deepagents>=0.1.0",
    "fastmcp>=3.2.2",
    "ipykernel>=7.2.0",
    "keyring>=24.0",
    "langchain-mcp-adapters>=0.1.0",
    "magentic>=0.39.0",
    "openai>=1.0.0",
    "pandas>=1.5.3",
    "plotly>=6.5.0",
    "sqlcipher3>=0.5.4",
    "websockets>=16.0.0",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "typecheck" },
    { include-group = "docs" },
    { include-group = "build" },
    { include-group = "features" },
]

[project.optional-dependencies]
dev = [
    "pytauri-wheel>=0.8.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.0.0",
    "ruff>=0.13",
    "mypy>=1.0.0",
    "pylint>=3.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-autorefs>=1.0.0",
    "mkdocstrings[python]>=0.26.0",
    "griffe>=1.0.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "cryptography>=46.0.0",
    "plotly>=6.5.0",
    "fakeredis>=2.33.0",
    "testcontainers>=4.14.0",
    "anthropic>=0.34.0",
    "anywidget>=0.9.0",
    "authlib>=1.3.0",
    "fastmcp>=3.2.2",
    "ipykernel>=7.2.0",
    "keyring>=24.0",
    "magentic>=0.39.0",
    "openai>=1.0.0",
    "pyinstaller>=6.0",
    "websockets>=16.0.0",
    "pandas>=1.5.3",
    "sqlcipher3>=0.5.4",
    "agent-client-protocol>=0.1.0",
    "deepagents>=0.1.0",
    "langchain-mcp-adapters>=0.1.0",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.34.0",
]
magentic = [
    "magentic>=0.39.0",
]
notebook = [
    "anywidget>=0.9.0",
    "ipykernel>=7.2.0",
]
mcp = [
    "fastmcp>=3.2.2",
]
acp = [
    "agent-client-protocol>=0.1.0",
]
deepagent = [
    "deepagents>=0.1.0",
    "fastmcp>=3.2.2",
    "langchain-mcp-adapters>=0.1.0",
    "agent-client-protocol>=0.1.0",
]
sqlite = [
    "sqlcipher3>=0.5.4",
]
auth = [
    "authlib>=1.3.0",
    "keyring>=24.0",
]
all = [
    "agent-client-protocol>=0.1.0",
    "anthropic>=0.34.0",
    "anywidget>=0.9.0",
    "authlib>=1.3.0",
    "deepagents>=0.1.0",
    "fastmcp>=3.2.2",
    "ipykernel>=7.2.0",
    "keyring>=24.0",
    "langchain-mcp-adapters>=0.1.0",
    "magentic>=0.39.0",
    "openai>=1.0.0",
    "sqlcipher3>=0.5.4"
]
freeze = [
    "pyinstaller>=6.0",
]

[project.urls]
Homepage = "https://github.com/deeleeramone/PyWry"
Repository = "https://github.com/deeleeramone/PyWry"
Documentation = "https://deeleeramone.github.io/PyWry/"

[build-system]
requires = ["hatchling>=1.21.0", "pip", "pytauri-wheel>=0.8.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pywry"]
# Force platform-specific wheel since we bundle native pytauri binaries
strict-naming = false

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "pywry/**/*",
    "AGENTS.md",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = [
    "plotly.*",
    "anywidget", "anywidget.*",
    "ipywidgets", "ipywidgets.*",
    "mcp.*",
    "traitlets", "traitlets.*",
    "IPython", "IPython.*",
    "openai", "openai.*",
    "anthropic", "anthropic.*",
    "magentic", "magentic.*",
    "keyring", "keyring.*",
    "fastmcp", "fastmcp.*",
    # LangChain / LangGraph / Deep Agents don't ship ``py.typed``
    # markers.  These modules only exist when the ``deepagent`` extra
    # is installed; without the overrides, mypy reports
    # ``import-untyped`` when they ARE present and
    # ``import-not-found`` when they aren't — the per-line
    # ``# type: ignore`` comments can't cover both, so declare the
    # whole family as untyped here.
    "langchain", "langchain.*",
    "langchain_core", "langchain_core.*",
    "langchain_mcp_adapters", "langchain_mcp_adapters.*",
    "langgraph", "langgraph.*",
    "deepagents", "deepagents.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pywry.mcp.server"
disallow_untyped_decorators = false
